welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if estFacemur(); {
   ^Program:1: error: illegal start of simple expression
if estFacemur(); {
               ^Program:3: error: ';' expected but 'else' found.
} else {
  ^